--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=redCom
 
 spring.datasource.url=jdbc:mysql://localhost:3306/redCom
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=950206
 
 spring.jpa.hibernate.ddl-auto= create
 
